fix:gap

--- a/mainsite/static/mainsite/style.css
+++ b/mainsite/static/mainsite/style.css
@@ -3057,7 +3057,7 @@ main{
   }
   .howItWork_img{
     width:100%;
-    min-height:48.4vw;
+    /* min-height:48.4vw; */
   }
   .howItWork .banner{
     width:100%;
